// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet on iOS renders nothing (the native sheet owns the UI) 1`] = `
{
  "lines": 304,
  "sha256": "59f0cf6f1be474e5180dd6d46c6ad1734a8e657f29646c618be9508dcdf78df8",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, android 390 1`] = `
{
  "lines": 344,
  "sha256": "3167be83f5cdd0469a058047e9cff6b194eb80b23eec8e73919476b717d19159",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet project ref, web 390 1`] = `
{
  "lines": 344,
  "sha256": "e4ed5f002c8c5fb26c673b419c17d0f1b53bcec8a46897c72f4a1ea731304ceb",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, android 390 1`] = `
{
  "lines": 352,
  "sha256": "1323d9e90ef7d4e7db97003ae65e0b5552d7a0380624c68424b5db59b2882f3b",
}
`;

exports[`lane B1 — components (golden, 390 phone) EntityActionSheet rfi ref, web 390 1`] = `
{
  "lines": 352,
  "sha256": "4df19ff553a51bde98ebc13e7c1436281a8a64bf45f86f2bc16cedab709f4e06",
}
`;

exports[`lane B1 — components (golden, 390 phone) RecordPaymentModal, open (iOS) 1`] = `
{
  "lines": 355,
  "sha256": "7d2b2add51c0f8f08d491bd1677fb02730041fad9ad52eb57ecab11f20267d01",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) budget-dashboard 1`] = `
{
  "lines": 454,
  "sha256": "9e700f93ea37a1e7771a5eabc807996f07ababf952357793313e82797a0eb68e",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow (no project) 1`] = `
{
  "lines": 724,
  "sha256": "8a00fe580951e799a995e1a9077baff7de61053c7a024b00e9414586d842ac55",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) cash-flow with a project (balance, expense, payment sheets) 1`] = `
{
  "lines": 724,
  "sha256": "2a018a3298f12dc7fa9c9e5d91c67ce4f92bd4041f16ff7475c21be030a5ec63",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing (commitment editor + phase sheet mounted) 1`] = `
{
  "lines": 763,
  "sha256": "a42108b8a09fa94bdd7156632ae15b729729ba10195e991db9af20bdf88db88e",
}
`;

exports[`lane B1 — the phone is unchanged (golden, 390 × 844 iOS) job-costing: the first phase pressed (PhaseDetailModal open) 1`] = `
{
  "lines": 815,
  "sha256": "238387628b563437cba1a78b94cf3b8830e6078c3183d49bb37c8fc54274c160",
}
`;
